Fix CSS bug where loading template is not visible in default theme

--- a/src/js/themes/default/css/metacatui.css
+++ b/src/js/themes/default/css/metacatui.css
@@ -341,18 +341,6 @@ select{
 
 /* NOTIFICATION AREA CSS
  * -------------------------------------------------- */
-  .notification i.loading{
-  	font-size: 2em;
-  	color: #FFFFFF;
-  }
-
-  .notification p{
-  	font-size: 20px;
-  	width: 350px;
-  	margin: 20px auto;
-  	display: block;
-  	color: #FFFFFF;
-  }
   .filter-contain .notification i{
   	color: #999;
   	font-size: .5em;
